# sum4u

./: .gitignore  API_KEY_CONFIG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DESIGN_APP.md  LICENSE  Makefile  PRD.md  PROJECT_STRUCTURE.md  README.md  _fix_hotkey.py  batch_process.sh  config.json  config_example.json  pyproject.toml  requirements.txt  ruff.toml  start.sh  start_audio.sh  start_webui.sh
.github/workflows/: ci.yml
audio-video-summarizer/: SKILL.md
audio-video-summarizer/scripts/src/: prompts.py
desktop/: build.spec  dock_drop.py  hotkey.py  main_app.py  menu_bar.py  notifier.py  preferences.py  preferences_window.py  preview.html  requirements.txt
docs/: classifier-design.md
scripts/: build_app.sh  run_desktop.sh
src/: audio.py  audio_handler.py  batch_processor.py  config.py  douyin_handler.py  keyframe_selector.py  main.py  prompts.py  summarize.py  transcribe.py  utils.py  video.py  video_classifier.py  webui.py
static/css/: desktop.css
static/js/: desktop_main.js  desktop_popover.js
templates/: desktop_main.html  desktop_popover.html
tests/: __init__.py  test_config.py  test_utils.py
